--- a/package.json
+++ b/package.json
@@ -50,6 +50,6 @@
     "less": "^2.4.0",
     "mocha": "^2.1.0",
     "selenium-webdriver": "^2.45.0",
-    "swagger-client": "2.1.10"
+    "swagger-client": "dilipkrish/swagger.js#v2.1.11-rfc6570"
   }
 }
